==> OS-Q/A52B/cores/esp32/spi/spi_drv.cpp <==
#include "mbc_config.h"
#include "Arduino.h"
#include "spi_drv.h"
#include "driver/periph_ctrl.h"

void SpiDrv::_writeBuffPkt(const uint8_t *data, uint32_t len, uint8_t offset){	
	len -= offset; // remove size of the bytes already in the buffer;

	// if len is greater than _interface.repPkt size, split message in different writes
	uint16_t availDataSpace = MAX_CMD_LEN - (offset + 1); // don't consider header (offset) and footer for the first write
	uint32_t byteWritten = 0;
	while(len > availDataSpace){
		// be sure to send a BUFFER_SIZE multiple in order to avoid 0 padding for this communication
		// in this way control chip will not notice difference between sending the whole message and split message in multiple writes
		uint16_t writeLen = ((uint16_t)(availDataSpace + 1) / BUFFER_SIZE) * BUFFER_SIZE;		 
		memcpy((_repPkt + _txIndex), (data + byteWritten), writeLen - offset); // remove the already used space for header
		write(_repPkt, writeLen);
		byteWritten += writeLen;
		len -= writeLen;
		_txIndex = 0;
		availDataSpace = MAX_CMD_LEN - 1; // take into account space for end command
		offset = 0; // don't consider offset for next iterations	
	}
	
	// at this point _interface.repPkt has enough space to store the whole message (or the remaining part)
	memcpy((_repPkt + _txIndex), (data + byteWritten), len);
	_txIndex += len;
	_repPkt[_txIndex - 1] = END_CMD;

	write(_repPkt, _txIndex);
}

void SpiDrv::begin()
{
	pinMode(PIN_SPI_SR, OUTPUT);
	digitalWrite(PIN_SPI_SR, HIGH);
	pinMode(SS, INPUT);
	uint32_t timeout = millis() + 350;
	while((digitalRead(SS) != HIGH) && (millis() < timeout));
	Serial.begin(115200); // part of workaround to use GPIO0 as handshake pin.
	//SPISlave.begin(MOSI, MISO, SCK, SS, PIN_SPI_HANDSHAKE);
	//Configuration for the SPI bus
    spi_bus_config_t buscfg={
        mosi_io_num : (gpio_num_t)g_APinDescription[MOSI].ulPin,
        miso_io_num : (gpio_num_t)g_APinDescription[MISO].ulPin,
        sclk_io_num : (gpio_num_t)g_APinDescription[SCK].ulPin
    };

    //Configuration for the SPI slave interface
    spi_slave_interface_config_t slvcfg={
        spics_io_num : (gpio_num_t)g_APinDescription[SS].ulPin,
        flags : 0,
        queue_size : 1,
        mode : 0,
        post_setup_cb : setupInt,
        post_trans_cb : transInt
    };

	//Configuration for the handshake line
	gpio_config_t io_conf;
	io_conf.pin_bit_mask= (1); // PIN_SPI_HANDSHAKE
	io_conf.mode = GPIO_MODE_OUTPUT;
	io_conf.intr_type = GPIO_INTR_DISABLE;

	//Configure handshake line as output
	gpio_config(&io_conf);

    //Enable pull-ups on SPI lines so we don't detect rogue pulses when no master is connected.
    gpio_set_pull_mode((gpio_num_t)g_APinDescription[MOSI].ulPin, GPIO_PULLUP_ONLY);
    gpio_set_pull_mode((gpio_num_t)g_APinDescription[SCK].ulPin, GPIO_PULLUP_ONLY);
    gpio_set_pull_mode((gpio_num_t)g_APinDescription[SS].ulPin, GPIO_PULLUP_ONLY);

    //Initialize SPI slave interface
    esp_err_t ret = spi_slave_initialize(HSPI_HOST, &buscfg, &slvcfg, 1);
    assert(ret==ESP_OK);
	
	// set a transaction in the queue to be able to receive messages from master
	memset(emptyPacket, 0, 128);

	trn.length=128*8;
    trn.rx_buffer=rx_buffer;
	trn.tx_buffer=emptyPacket;
	
	spi_slave_queue_trans(HSPI_HOST, &trn, 0);
	// The following workaround is needed to use GPIO0 as handshake pin in SPI communication.
	// It seems that if SPISlave library is used GPIO0 is always HIGH,
	// but if serial communication is initialized before and after the SPISlave.begin function this issue does not occur.
	// Why?
	Serial.begin(115200);
	Serial.end();
	periph_module_disable( PERIPH_UART0_MODULE );
	delay( 20 );
	periph_module_enable( PERIPH_UART0_MODULE );
	periph_module_disable( PERIPH_UART1_MODULE );
	delay( 20 );
	periph_module_enable( PERIPH_UART1_MODULE );
	periph_module_disable( PERIPH_UART2_MODULE );
	delay( 20 );
	periph_module_enable( PERIPH_UART2_MODULE );

	digitalWrite(PIN_SPI_SR, LOW);
}

void SpiDrv::sendParam(uint16_t param, uint8_t lastParam){
	// NOTE for each append be sure to not insert more than buffer size bytes in buffer or append function
	// won't let me do that.
	if (_txIndex + 3 < MAX_CMD_LEN) {
		// since each parameter is two bytes wide, add 2 as the parameter size
		_repPkt[_txIndex++] = 2;
		// then add the parameter (big-endian mode) 
		_repPkt[_txIndex++] = (uint8_t)((param & 0xff00) >> 8);
		_repPkt[_txIndex++] = (uint8_t)(param & 0xff);
	}

	// if this is the last parameter
	if (lastParam == 1) {
		_txBufFinalizePacket();
	}
}

void SpiDrv::sendParam(uint8_t *param, uint8_t param_len, uint8_t lastParam){
	// NOTE for each append be sure to not insert more than buffer size byte in buffer or append function
	// won't let me do that.

	if (_txIndex + param_len + 1 < MAX_CMD_LEN) {
		// append the typ. parameter size (1 byte)
		_repPkt[_txIndex++] = param_len;

		// append all the parameters from the list to the buffer
		memcpy(&_repPkt[_txIndex], param, param_len);
		_txIndex += param_len;
	}

	// if this is the last parameter
	if (lastParam == 1) {
		_txBufFinalizePacket();
	}
}
