==> OS-Q/A52B/cores/samd21/spi/spi_drv.cpp <==
#include "mbc_config.h"
#include "Arduino.h"
#include "spi_drv.h"
#include "variant.h"
#include "wiring_private.h"
#define TX_DMA_CHANNEL 0
#define RX_DMA_CHANNEL 1

void SpiDrv::begin()
{
	digitalWrite(SLAVESELECT, HIGH);
	_interruptReq = false;
	_txIndex = 0;

	memset(_txBuf, 0, TXBUF_LEN);

	// this sets the sr pin from companion chip to us and attaches to it a PINCHANGE interrupt.
	pinMode(SLAVEREADY, INPUT);
	attachInterrupt(digitalPinToInterrupt(SLAVEREADY), interruptFunction, CHANGE);

	// use DMA for SPI communication: Channel 0 for TX - Channel 1 for RX
	// configure DMA
	PM->AHBMASK.bit.DMAC_       = 1; // Initialize DMA clocks
	PM->APBBMASK.bit.DMAC_      = 1;
	DMAC->CTRL.bit.DMAENABLE    = 0; // Disable DMA controller
	DMAC->CTRL.bit.SWRST        = 1; // Perform software reset
	DMAC->BASEADDR.bit.BASEADDR = (uint32_t)_descriptor;
	DMAC->WRBADDR.bit.WRBADDR   = (uint32_t)_writeback;
	// Re-enable DMA controller with all priority levels
	DMAC->CTRL.reg = DMAC_CTRL_DMAENABLE | DMAC_CTRL_LVLEN(0xF);

	// configure channel 0 - TX
	// Perform a reset
	DMAC->CHID.bit.ID         = TX_DMA_CHANNEL;
	DMAC->CHCTRLA.bit.ENABLE  = 0;
	DMAC->CHCTRLA.bit.SWRST   = 1;
	// Clear software trigger
	DMAC->SWTRIGCTRL.reg     &= ~(1 << TX_DMA_CHANNEL);
	// Configure default behaviors
	DMAC->CHCTRLB.bit.LVL     = 0;
	DMAC->CHCTRLB.bit.TRIGSRC = 0x04; //SERCOM1_DMAC_ID_TX;
	DMAC->CHCTRLB.bit.TRIGACT = 0x02; //DMAC_CHCTRLA_TRIGACT_BEAT;

	// configure channel 1 - RX
	// Perform a reset for the allocated channel
	DMAC->CHID.bit.ID         = RX_DMA_CHANNEL;
	DMAC->CHCTRLA.bit.ENABLE  = 0;
	DMAC->CHCTRLA.bit.SWRST   = 1;
	// Clear software trigger
	DMAC->SWTRIGCTRL.reg     &= ~(1 << RX_DMA_CHANNEL);
	// Configure default behaviors
	DMAC->CHCTRLB.bit.LVL     = 0;
	DMAC->CHCTRLB.bit.TRIGSRC = 0x03; //SERCOM1_DMAC_ID_RX;
	DMAC->CHCTRLB.bit.TRIGACT = 0x02; //DMAC_CHCTRLA_TRIGACT_BEAT;
	DMAC->CHINTENSET.bit.TCMPL = 0x01; // enable interrupt on transfer complete
	DMAC->CHINTENSET.bit.TERR = 0x01; // enable interrupt on transfer error

	// set descriptors
	_descriptor[0].BTCTRL.bit.VALID    = true;
	_descriptor[0].BTCTRL.bit.EVOSEL   = 0x00; //DMA_EVENT_OUTPUT_DISABLED;
	_descriptor[0].BTCTRL.bit.BLOCKACT = 0; //DMA_BLOCK_ACTION_NOACT;
	_descriptor[0].BTCTRL.bit.BEATSIZE = 0x0; //DMA_BEAT_SIZE_BYTE;
	_descriptor[0].BTCTRL.bit.SRCINC   = true;
	_descriptor[0].BTCTRL.bit.DSTINC   = false;
	_descriptor[0].BTCTRL.bit.STEPSEL  = 0x0; //DMA_STEPSEL_DST;
	_descriptor[0].BTCTRL.bit.STEPSIZE = 0x0; //DMA_ADDRESS_INCREMENT_STEP_SIZE_1;

	_descriptor[1].BTCTRL.bit.VALID    = true;
	_descriptor[1].BTCTRL.bit.EVOSEL   = 0x00; //DMA_EVENT_OUTPUT_DISABLED;
	_descriptor[1].BTCTRL.bit.BLOCKACT = 0; //DMA_BLOCK_ACTION_NOACT;
	_descriptor[1].BTCTRL.bit.BEATSIZE = 0x0; //DMA_BEAT_SIZE_BYTE;
	_descriptor[1].BTCTRL.bit.SRCINC   = false;
	_descriptor[1].BTCTRL.bit.DSTINC   = true;
	_descriptor[1].BTCTRL.bit.STEPSEL  = 0x0; //DMA_STEPSEL_DST;
	_descriptor[1].BTCTRL.bit.STEPSIZE = 0x0; //DMA_ADDRESS_INCREMENT_STEP_SIZE_1;

	// enable DMA interrupt
	NVIC_EnableIRQ(DMAC_IRQn);
	NVIC_SetPriority(DMAC_IRQn, (1<<__NVIC_PRIO_BITS)-1);

	// init master SPI interface
	//intSPI.begin();
	// PIO init
	pinPeripheral(PIN_SPI1_MISO, g_APinDescription[PIN_SPI1_MISO].ulPinType);
	pinPeripheral(PIN_SPI1_SCK, g_APinDescription[PIN_SPI1_SCK].ulPinType);
	pinPeripheral(PIN_SPI1_MOSI, g_APinDescription[PIN_SPI1_MOSI].ulPinType);
	//disable SPI
	while(SERCOM1->SPI.SYNCBUSY.bit.ENABLE){
		//Waiting then enable bit from SYNCBUSY is equal to 0;
	}
	//Setting the enable bit to 0
	SERCOM1->SPI.CTRLA.bit.ENABLE = 0;
	//init SPI
	//Setting the Software Reset bit to 1
	SERCOM1->SPI.CTRLA.bit.SWRST = 1;
	//Wait both bits Software Reset from CTRLA and SYNCBUSY are equal to 0
	while(SERCOM1->SPI.CTRLA.bit.SWRST || SERCOM1->SPI.SYNCBUSY.bit.SWRST);
	// Setting NVIC
	NVIC_EnableIRQ(SERCOM1_IRQn);
	NVIC_SetPriority(SERCOM1_IRQn, SERCOM_NVIC_PRIORITY);  // set Priority

	//Setting clock
	GCLK->CLKCTRL.reg = GCLK_CLKCTRL_ID( GCM_SERCOM1_CORE ) | // Generic Clock 0 (SERCOMx)
					  GCLK_CLKCTRL_GEN_GCLK0 | // Generic Clock Generator 0 is source
					  GCLK_CLKCTRL_CLKEN ;

	while ( GCLK->STATUS.reg & GCLK_STATUS_SYNCBUSY ){
		// Wait for synchronization
	}
	//Setting the CTRLA register
	SERCOM1->SPI.CTRLA.reg =	SERCOM_SPI_CTRLA_MODE_SPI_MASTER |
						  SERCOM_SPI_CTRLA_DOPO(PAD_SPI1_TX) |
						  SERCOM_SPI_CTRLA_DIPO(PAD_SPI1_RX) |
						  0 << SERCOM_SPI_CTRLA_DORD_Pos; //MSBFIRST

	//Setting the CTRLB register
	SERCOM1->SPI.CTRLB.reg = SERCOM_SPI_CTRLB_CHSIZE(SPI_CHAR_SIZE_8_BITS) |
						  SERCOM_SPI_CTRLB_RXEN;	//Active the SPI receiver.
	// Init SPI clock
	//Setting the CTRLA register
	SERCOM1->SPI.CTRLA.reg |=( 0 << SERCOM_SPI_CTRLA_CPHA_Pos ) |
							( 0 << SERCOM_SPI_CTRLA_CPOL_Pos );

	//SPI frequency 8MHz
	SERCOM1->SPI.BAUD.reg = SERCOM_FREQ_REF / (2 * (SERCOM_FREQ_REF / (1 + ((F_CPU - 1) / 9500000)))) - 1;
	// enable SPI
	//Setting the enable bit to 1
	SERCOM1->SPI.CTRLA.bit.ENABLE = 1;
	while(SERCOM1->SPI.SYNCBUSY.bit.ENABLE){
	//Waiting then enable bit from SYNCBUSY is equal to 0;
	}

	// wait for synchronization signals
	uint32_t timeout = millis() + 1300;
	while((digitalRead(SLAVEREADY) != HIGH) && (millis() < timeout));
	timeout = millis() + 100;
	while((digitalRead(SLAVEREADY) != LOW) && (millis() < timeout));
}

bool SpiDrv::sendParam(uint16_t param, uint8_t lastParam){
	if(_txIndex + 3 < TXBUF_LEN){
		// since each parameter is two bytes wide, add 2 as the parameter size
		_txBuf[_txIndex++] = 2;
		// then add the parameter (big-endian mode)
		_txBuf[_txIndex++] = (uint8_t)((param & 0xff00) >> 8);
		_txBuf[_txIndex++] = (uint8_t)(param & 0xff);
	}
	else
		return false;

	// if this is the last parameter
	if (lastParam == 1) {
		return _txBufFinalizePacket();
	}

	return true;
}

bool SpiDrv::sendParam(uint8_t *param, uint8_t param_len, uint8_t lastParam){
	if(_txIndex + param_len + 1 < TXBUF_LEN){
		// append parameter size (1 byte)
		_txBuf[_txIndex++] = param_len;
		// append all the parameters from the list to the buffer
		memcpy(&_txBuf[_txIndex], param, param_len);
		_txIndex += param_len;
	}
	else
		return false;

	// if this is the last parameter
	if (lastParam == 1) {
		return _txBufFinalizePacket();
	}

	return true;
}

bool SpiDrv::_writeBuffPkt(uint8_t *data, uint32_t len, uint8_t dataOffset){
	uint16_t j = 0;
	bool firstWrite = true;

	uint32_t addrMem = (uint32_t)(data[dataOffset] + (data[dataOffset + 1] << 8) + (data[dataOffset + 2] << 16) + (data[dataOffset + 3] << 24));
	// write out the data
	while (len > 0){
		// wait for handshake - when HIGH companion is ready for a new transaction
		while((PORT->Group[PORTA].IN.reg & (1ul << 15)) == 0); // while(digitalRead(SLAVEHANDSHAKE) != HIGH);
		_enableDevice();
		
		if(firstWrite){
			// send header
			transferComplete = false;
			// write is performed automatically when DMA starts a transaction on channel 0
			_descriptor[0].BTCNT.reg           = dataOffset; //count;
			_descriptor[0].SRCADDR.reg         = (uint32_t)data + dataOffset;
			_descriptor[0].DSTADDR.reg         = (uint32_t)(&SERCOM1->SPI.DATA.reg);
			_descriptor[0].DESCADDR.reg        = 0;

			// when data are available in the SPI RX register, DMA will start a transaction on channel 1 to save them in readBuf
			_descriptor[1].BTCNT.reg           = dataOffset; //count;
			_descriptor[1].SRCADDR.reg         = (uint32_t)(&SERCOM1->SPI.DATA.reg);
			_descriptor[1].DSTADDR.reg         = (uint32_t)readBuf + dataOffset;
			_descriptor[1].DESCADDR.reg        = 0;

			// enable DMA to start SPI communication
			DMAC->CHID.bit.ID    = RX_DMA_CHANNEL;
			DMAC->CHCTRLA.bit.ENABLE = 1; // Enable the transfer channel 1
			DMAC->CHID.bit.ID    = TX_DMA_CHANNEL;
			DMAC->CHCTRLA.bit.ENABLE = 1; // Enable the transfer channel 0
			while(!transferComplete);
			transferComplete = false;
		}
		if(len > SPI_MAX_TX_SIZE){
			// data are greater than SPI_MAX_TX_SIZE. Multiple writes are requested
			size_t i = SPI_MAX_TX_SIZE - dataOffset;

			transferComplete = false;
			// write is performed automatically when DMA starts a transaction on channel 0
			_descriptor[0].BTCNT.reg           = i; //count;
			_descriptor[0].SRCADDR.reg         = (uint32_t)(addrMem + j) + i;
			_descriptor[0].DSTADDR.reg         = (uint32_t)(&SERCOM1->SPI.DATA.reg);
			_descriptor[0].DESCADDR.reg        = 0;

			// when data are available in the SPI RX register, DMA will start a transaction on channel 1 to save them in readBuf
			_descriptor[1].BTCNT.reg           = i; //count;
			_descriptor[1].SRCADDR.reg         = (uint32_t)(&SERCOM1->SPI.DATA.reg);
			_descriptor[1].DSTADDR.reg         = (uint32_t)readBuf + dataOffset + i;
			_descriptor[1].DESCADDR.reg        = 0;

			// enable DMA to start SPI communication
			DMAC->CHID.bit.ID    = RX_DMA_CHANNEL;
			DMAC->CHCTRLA.bit.ENABLE = 1; // Enable the transfer channel 1
			DMAC->CHID.bit.ID    = TX_DMA_CHANNEL;
			DMAC->CHCTRLA.bit.ENABLE = 1; // Enable the transfer channel 0
			while(!transferComplete);
			transferComplete = false;

			j += SPI_MAX_TX_SIZE - dataOffset;
			len -= SPI_MAX_TX_SIZE; // consider also dataOffset that we previously transferred

			if(firstWrite){
				firstWrite = false;
			}
		}
		else{
			// data fit SPI_MAX_TX_SIZE
			size_t i = len - dataOffset - 1;
			transferComplete = false;
			// write is performed automatically when DMA starts a transaction on channel 0
			_descriptor[0].BTCNT.reg           = i; //count;
			_descriptor[0].SRCADDR.reg         = (uint32_t)(addrMem + j) + i;
			_descriptor[0].DSTADDR.reg         = (uint32_t)(&SERCOM1->SPI.DATA.reg);
			_descriptor[0].DESCADDR.reg        = 0;

			// when data are available in the SPI RX register, DMA will start a transaction on channel 1 to save them in readBuf
			_descriptor[1].BTCNT.reg           = i; //count;
			_descriptor[1].SRCADDR.reg         = (uint32_t)(&SERCOM1->SPI.DATA.reg);
			_descriptor[1].DSTADDR.reg         = (uint32_t)readBuf + dataOffset + i;
			_descriptor[1].DESCADDR.reg        = 0;

			// enable DMA to start SPI communication
			DMAC->CHID.bit.ID    = RX_DMA_CHANNEL;
			DMAC->CHCTRLA.bit.ENABLE = 1; // Enable the transfer channel 1
			DMAC->CHID.bit.ID    = TX_DMA_CHANNEL;
			DMAC->CHCTRLA.bit.ENABLE = 1; // Enable the transfer channel 0
			while(!transferComplete);
			transferComplete = false;

			// send END_CMD and 0 padding to a 4-byte multiple
			uint8_t remaining = ((len % 4) != 0) ? (4 - (len % 4)) : 0;
			static uint8_t endPacket[] = {END_CMD, 0, 0, 0};
			remaining++; // END_CMD

			// write is performed automatically when DMA starts a transaction on channel 0
			_descriptor[0].BTCNT.reg           = remaining; //count;
			_descriptor[0].SRCADDR.reg         = (uint32_t)endPacket + remaining;
			_descriptor[0].DSTADDR.reg         = (uint32_t)(&SERCOM1->SPI.DATA.reg);
			_descriptor[0].DESCADDR.reg        = 0;

			// when data are available in the SPI RX register, DMA will start a transaction on channel 1 to save them in readBuf
			_descriptor[1].BTCNT.reg           = remaining; //count;
			_descriptor[1].SRCADDR.reg         = (uint32_t)(&SERCOM1->SPI.DATA.reg);
			_descriptor[1].DSTADDR.reg         = (uint32_t)readBuf + dataOffset + remaining;
			_descriptor[1].DESCADDR.reg        = 0;

			// enable DMA to start SPI communication
			DMAC->CHID.bit.ID    = RX_DMA_CHANNEL;
			DMAC->CHCTRLA.bit.ENABLE = 1; // Enable the transfer channel 1
			DMAC->CHID.bit.ID    = TX_DMA_CHANNEL;
			DMAC->CHCTRLA.bit.ENABLE = 1; // Enable the transfer channel 0
			while(!transferComplete);
			transferComplete = false;

			if(firstWrite){
				firstWrite = false;
			}
			len -= len;
		}
		dataOffset = 0;

		_disableDevice();

		// check ack
		uint32_t timeout = millis() + 2000;
		// wait for the SR to go HIGH
		while(srLevel != HIGH && timeout > millis());

		if(timeout <= millis()){
			return false;
		}

		if(readBuf[1] != 0){
			if(spiIsr != NULL)
				spiIsr(readBuf);
		}
	}
	return true;
}
